--- a/src/app/administrative/tanggalbisnis/tanggalbisnis.component.html
+++ b/src/app/administrative/tanggalbisnis/tanggalbisnis.component.html
@@ -1,59 +1,50 @@
 <!--Main layout-->
-<div style="margin: 20px;">
-  <!-- Start your project here-->
-  <div class="d-flex flex-column h-100">
-    <div id="outer" class="d-flex flex-column flex-grow">
+<div class="m-3 h-100">
+    <!-- Start your project here-->
+    <div id="outer" class="d-flex flex-column">
       <div class="card konten">
         <div class="card-body">
-          <h5 class="card-title">Pengaturan Tanggal Bisnis</h5>
-
-          <!--panel 1-->
-          <div class="card">
-            <div class="card-body">
-              <table class="table table-bordered btn-sm">
-                <tr>
-                  <td class="font-weight-bold align-middle" style="width: 250px;">
-                    Tanggal Bisnis Sekarang
-                  </td>
-                  <td class="font-weight-normal align-middle" style="width: 5px;">:</td>
-                  <td class="font-weight-normal align-middle" style="width: 400px;">
-                    <div class="input-group mb-3">
-                      <div class="input-group align-middle">
-                        <input type="text" class="form-control">
-                        <div class="input-group-append" id="button-addon4">
-                          <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Ubah</button>
-                        </div>
-                      </div>
-                    </div>
-                  </td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td class="font-weight-bold align-middle">
-                    Buka Cabang Manual
-                  </td>
-                  <td class="font-weight-normal align-middle">:</td>
-                  <td class="font-weight-normal align-middle">
-                    <div class="md-form input-group mb-3">
-                    <input type="text" class="form-control" value="21/12/2012" style="width: 100px;">
+          <h5 class="text-primary font-weight-bold">Pengaturan Tanggal Bisnis</h5>
+  
+          <mdb-card>
+            <mdb-card-body>
+  
+              <!--input 1-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold" style="width: 500px;">Tanggal Bisnis Sekarang</label>
+                <label class="col-form-label pr-0 font-weight-bold" >:</label>
+                <div class="col-3 form-inline" >
+                  <div class="input-group">
+                    <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
+                    <mat-datepicker #picker></mat-datepicker>
                     <div class="input-group-append">
-                      <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button"
-                        mdbWavesEffect>Buka</button>
+                      <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
                     </div>
-            </div>
+                    &nbsp;&nbsp;
+                    <button mdbBtn color="primary" size="md" class="m-0 px-3 py-2" type="button"
+                      mdbWavesEffect>Cari</button>
+                      <span class="col-6"></span>
+                  </div>
+                </div>
+              </div>
+              <!--input1-->
+              <!--input 2-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Buka Cabang Manual </label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label> &nbsp;&nbsp;&nbsp;
+                <div class="3"><input type="text" class="form-control"></div> &nbsp; &nbsp;
+                <button mdbBtn color="primary" size="md" class="m-0 px-3 py-2" type="button"
+                  mdbWavesEffect>Buka</button>
+                <span class="col-6"></span>
+              </div>
+              <!--input 2-->
 
-            </td>
-            <td>
-            </tr>
-            </table>
-          </div>
+            </mdb-card-body>
+          </mdb-card>
+  
+          <span style="height: 10vh;"></span>
         </div>
-        <!--panel 1  -->
-        <br>
       </div>
     </div>
+  
   </div>
-</div>
-<!-- /Start your project here-->
-</div>
-<!--Main layout-->
