--- a/src/app/cashdrawer/sinkronisasi/sinkronisasi.component.html
+++ b/src/app/cashdrawer/sinkronisasi/sinkronisasi.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Sinkronisasi Cash Drawer</h5>
+        <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">Sinkronisasi Cash Drawer</h5>
 
         <form>
           <mdb-card>
