--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -63,8 +63,8 @@
                   <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahbaru']">Pembuatan Nasabah Baru</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabah']">Duplikat Cek Nasabah Baru - Corporate</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabahindvl']">Duplikat Cek Nasabah Baru - Individual</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahcorporate']">Buat Nasaba Baru - Corporate</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahindividual']">Buat Nasaba Baru - Individual</a>
+                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahcorporate']">Buat Nasabah Baru - Corporate</a>
+                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahindividual']">Buat Nasabah Baru - Individual</a>
               </div>
             </div>
 
