--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Pencarian Nasabah</h5>
+        <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">Pencarian Nasabah</h5>
 
         <mdb-card class="mb-3">
           <mdb-card-body>
@@ -55,22 +55,22 @@
             </div>
             
             <div>
+              <br>
               <hr>
             </div>
+            <br>
             <div class="form-group row">
-                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Pembuatan Nasabah Baru</label>
-            </div>
-            <div class="form-group row">
-                <span class="col-2"></span>
+                <label class="col-2 col-form-label font-weight-bold">Pembuatan Nasabah Baru</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <div class="col-3">
-                  <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
+                  <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;height: 45px">
                     <option selected>Pilih Salah Satu</option>
                     <option value="1">Corporate</option>
                     <option value="2">Retail</option>
                   </select>
                 </div>
                 <div class="input-group-append" id="button-addon4">
-                    <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
+                    <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" style="height: 45px" mdbWavesEffect>Tambah</button>
                   </div>
               </div>
               
