--- a/src/app/navigation/home-nav/home-nav.component.html
+++ b/src/app/navigation/home-nav/home-nav.component.html
@@ -1,7 +1,7 @@
 <!--Main Navigation-->
 <div>
   <nav style="margin-top: 20vh;margin-left: 20px;">
-    <button class="btn btn-default btn-press" type="submit" style= "color: #ffff00;">Financial Retail</button>
+    <button class="btn btn-default btn-press" type="submit">Financial Retail</button>
     <button class="btn btn-default btn-press" type="submit">Administrative</button>
     <button class="btn btn-default btn-press" type="submit">Report</button>
     <button class="btn btn-default btn-press" type="submit">User Maintenance</button>
