--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -5,7 +5,7 @@
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card">
         <div class="card-body">
-          <h5>DAFTAR USER</h5>
+          <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">DAFTAR USER</h5>
           <!-- Default form contact -->
           <div class="card">
             <div class="card-body">
