--- a/src/app/usermaintenance/refresh-user/refresh-user.component.html
+++ b/src/app/usermaintenance/refresh-user/refresh-user.component.html
@@ -6,7 +6,7 @@
       <div class="card-body">
 
         <form>
-          <h5>Refresh User</h5>
+          <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">Refresh User</h5>
           <mdb-card class="mb-3">
             <mdb-card-body>
               <div class="form-group row ">
