--- a/src/app/usermaintenance/role/role.component.html
+++ b/src/app/usermaintenance/role/role.component.html
@@ -4,9 +4,8 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-       
         <form>
-            <h5>FORM PENCARIAN ROLE</h5>
+            <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">FORM PENCARIAN ROLE</h5>
           <mdb-card class="mb-3">
             <mdb-card-body>
               <div class="form-group row ">
@@ -25,7 +24,7 @@
             </mdb-card-body>
           </mdb-card>
 
-          <h5>PEMBUATAN ROLE BARU</h5>
+          <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">PEMBUATAN ROLE BARU</h5>
           <mdb-card>
             <mdb-card-body>
                 <div class="d-flex justify-content-center">
