--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
@@ -5,7 +5,7 @@
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card konten">
         <div class="card-body">
-          <h5 class="card-title">Daftar User Sign On</h5>
+          <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">Daftar User Sign On</h5>
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
@@ -39,13 +39,13 @@
             </div>
           </div>
           <!--panel 1-->
-          <h5 class="card-title" style="margin-top: 10px;">Daftar User</h5>
+          <h5 class="text-primary font-weight-bold" style="margin-top: 10px;" style="margin-top: 10px;">Daftar User</h5>
           <!--panel 2-->
           <div class="card">
             <div class="card-body">
               <table class="table table-hover">
-                <thead class="grey lighten-2">
-                  <tr class="font-weight-bold">
+                <thead class="grey lighten-2" >
+                  <tr class="col-form-label pr-0 font-weight-bold" style="color: #2bbbad;width:4%;line-height: 1.2">
                     <th scope="col">User ID</th>
                     <th scope="col">Nama</th>
                     <th scope="col">Login</th>
