--- a/src/app/nasabah/daftar-kode-nasabah/daftar-kode-nasabah.component.html
+++ b/src/app/nasabah/daftar-kode-nasabah/daftar-kode-nasabah.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Daftar Kode Nasabah</h5>
+        <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">Daftar Kode Nasabah</h5>
         <br>
         <div class="d-flex">
           <div class="p-2 col-5">
