--- a/src/app/usermaintenance/cari-baru-user/cari-baru-user.component.html
+++ b/src/app/usermaintenance/cari-baru-user/cari-baru-user.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Pencarian User</h5>
+        <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">Pencarian User</h5>
 
         <mdb-card>
           <mdb-card-body>
