--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/giro.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/giro.component.html
@@ -83,7 +83,7 @@
 
         <mat-tab-group>
           <mat-tab label="Data Administrasi">
-            konten 1
+            <app-data-administrasi-giro></app-data-administrasi-giro>
           </mat-tab>
           <mat-tab label="Data Suku Bunga"> Content 2 </mat-tab>
           <mat-tab label="Saldo Rekening"> Content 3 </mat-tab>
