--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/tabungan/komponen/data-administrasi/data-administrasi.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/tabungan/komponen/data-administrasi/data-administrasi.component.html
@@ -1,153 +1,160 @@
-<h5 class="text-primary font-weight-bold">Data Tabungan</h5>
-<div class="row">
-  <label class="col-3 font-weight-bold">Nomor Tabungan</label>
-  <label>:</label>
-  <label class="col-3">0500001230</label>
-</div>
+<mdb-card class="mb-3">
+  <mdb-card-body>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Nama Pemegang(Penabung)</label>
-  <label>:</label>
-  <label class="col-3">41200000</label>
-</div>
+    <h5 class="text-primary font-weight-bold">Data Tabungan</h5>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Nomor Tabungan</label>
+      <label>:</label>
+      <label class="col-3">0500001230</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Nomor Nasabah</label>
-  <label>:</label>
-  <label class="col-3">2131236712</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Nama Pemegang(Penabung)</label>
+      <label>:</label>
+      <label class="col-3">41200000</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Nama Nasabah</label>
-  <label>:</label>
-  <label class="col-3">Dwi S</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Nomor Nasabah</label>
+      <label>:</label>
+      <label class="col-3">2131236712</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Alamat Tab.</label>
-  <label>:</label>
-  <label class="col-3">
-    Jalan Raya Abian Semal No. 134 Abian Semal
-  </label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Nama Nasabah</label>
+      <label>:</label>
+      <label class="col-3">Dwi S</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Telepon</label>
-  <label>:</label>
-  <label class="col-3">2131236712</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Alamat Tab.</label>
+      <label>:</label>
+      <label class="col-3">
+        Jalan Raya Abian Semal No. 134 Abian Semal
+      </label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Mata Uang</label>
-  <label>:</label>
-  <label class="col-3">IDR</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Telepon</label>
+      <label>:</label>
+      <label class="col-3">2131236712</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Cabang</label>
-  <label>:</label>
-  <label class="col-3">034 Cabang Utama</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Jenis Rekening</label>
-  <label>:</label>
-  <label class="col-3">023 Tabungan Bima</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Mata Uang</label>
+      <label>:</label>
+      <label class="col-3">IDR</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Kode Distribusi</label>
-  <label>:</label>
-  <label class="col-3">00</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Tanggal Pembukaan</label>
-  <label>:</label>
-  <label class="col-3">12/12/2012</label>
-  <span></span>
-  <label class="col-2 font-weight-bold">Transaksi Terakhir</label>
-  <label>:</label>
-  <label class="col-3">12/12/2012</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Flag Status</label>
-  <label>:</label>
-  <label class="col-3">000001</label>
-  
-  <label class="col-2 font-weight-bold">Flag Biaya </label>
-  <label>:</label>
-  <label class="col-3">01000</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Minimum</label>
-  <label>:</label>
-  <label class="col-3">10.000</label>
-  
-  <label class="col-2 font-weight-bold">Kios</label>
-  <label>:</label>
-  <label class="col-3">2</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Kode Bunga Cerukan</label>
-  <label>:</label>
-  <label class="col-3">00 SUku Bunga Dasar 0.0%</label>
-  
-  <label class="col-2 font-weight-bold">Efektif</label>
-  <label>:</label>
-  <label class="col-3">12/12/2012</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Hari Cetak R/K</label>
-  <label>:</label>
-  <label class="col-3">31</label>
-  <label class="col-2 font-weight-bold">Stop Bunga</label>
-  <label>:</label>
-  <label class="col-3">Tidak</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Cabang</label>
+      <label>:</label>
+      <label class="col-3">034 Cabang Utama</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Jenis Rekening</label>
+      <label>:</label>
+      <label class="col-3">023 Tabungan Bima</label>
+    </div>
 
-<div class="row">
-    <label class="col-2 font-weight-bold">Cetak Nota</label>
-    <label>:</label>
-    <label class="col-1">Ya</label>
-    <label class="col-2 font-weight-bold">Cetak Passbook</label>
-    <label>:</label>
-    <label class="col-1">Ya</label>
-    <label class="col-2 font-weight-bold">Cetak Aktiva</label>
-    <label>:</label>
-    <label class="col-1">Ya</label>
-  </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Kode Distribusi</label>
+      <label>:</label>
+      <label class="col-3">00</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Tanggal Pembukaan</label>
+      <label>:</label>
+      <label class="col-3">12/12/2012</label>
+      <span></span>
+      <label class="col-2 font-weight-bold">Transaksi Terakhir</label>
+      <label>:</label>
+      <label class="col-3">12/12/2012</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Flag Status</label>
+      <label>:</label>
+      <label class="col-3">000001</label>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Jenis Penggunaan</label>
-  <label>:</label>
-  <label class="col-3">00- Belum Diketahui</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Kd. Lokasi</label>
-  <label>:</label>
-  <label class="col-3">0991 - Pemkot Semarang</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Sektor Ekonomi</label>
-  <label>:</label>
-  <label class="col-3">000 -</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Kolektibilitas</label>
-  <label>:</label>
-  <label class="col-3">1 Lancar</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Format Tabungan</label>
-  <label>:</label>
-  <label class="col-3">002 Tabungan Bima </label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Syarat Tabungan</label>
-  <label>:</label>
-  <label class="col-3">002 Tabunga Bima </label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Rertribusi</label>
-  <label>:</label>
-  <label class="col-3">Tidak</label>
-</div>
+      <label class="col-2 font-weight-bold">Flag Biaya </label>
+      <label>:</label>
+      <label class="col-3">01000</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Minimum</label>
+      <label>:</label>
+      <label class="col-3">10.000</label>
+
+      <label class="col-2 font-weight-bold">Kios</label>
+      <label>:</label>
+      <label class="col-3">2</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Kode Bunga Cerukan</label>
+      <label>:</label>
+      <label class="col-3">00 SUku Bunga Dasar 0.0%</label>
+
+      <label class="col-2 font-weight-bold">Efektif</label>
+      <label>:</label>
+      <label class="col-3">12/12/2012</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Hari Cetak R/K</label>
+      <label>:</label>
+      <label class="col-3">31</label>
+      <label class="col-2 font-weight-bold">Stop Bunga</label>
+      <label>:</label>
+      <label class="col-3">Tidak</label>
+    </div>
+
+    <div class="row">
+      <label class="col-2 font-weight-bold">Cetak Nota</label>
+      <label>:</label>
+      <label class="col-1">Ya</label>
+      <label class="col-2 font-weight-bold">Cetak Passbook</label>
+      <label>:</label>
+      <label class="col-1">Ya</label>
+      <label class="col-2 font-weight-bold">Cetak Aktiva</label>
+      <label>:</label>
+      <label class="col-1">Ya</label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 font-weight-bold">Jenis Penggunaan</label>
+      <label>:</label>
+      <label class="col-3">00- Belum Diketahui</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Kd. Lokasi</label>
+      <label>:</label>
+      <label class="col-3">0991 - Pemkot Semarang</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Sektor Ekonomi</label>
+      <label>:</label>
+      <label class="col-3">000 -</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Kolektibilitas</label>
+      <label>:</label>
+      <label class="col-3">1 Lancar</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Format Tabungan</label>
+      <label>:</label>
+      <label class="col-3">002 Tabungan Bima </label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Syarat Tabungan</label>
+      <label>:</label>
+      <label class="col-3">002 Tabunga Bima </label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Rertribusi</label>
+      <label>:</label>
+      <label class="col-3">Tidak</label>
+    </div>
+
+
+  </mdb-card-body>
+</mdb-card>
