--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/tabungan/komponen/saldo-rekening/saldo-rekening.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/tabungan/komponen/saldo-rekening/saldo-rekening.component.html
@@ -1,92 +1,98 @@
-<h5 class="text-primary font-weight-bold">Saldo Rekening</h5>
-<div class="row">
-  <label class="col-3 font-weight-bold">No Rekening</label>
-  <label>:</label>
-  <label class="col-3">20345678 - Ali Sodiq</label>
-</div>
+<mdb-card class="mb-3">
+  <mdb-card-body>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Pendebetan Harian</label>
-  <label>:</label>
-  <label class="col-3">0</label>
-</div>
+    <h5 class="text-primary font-weight-bold">Saldo Rekening</h5>
+    <div class="row">
+      <label class="col-3 font-weight-bold">No Rekening</label>
+      <label>:</label>
+      <label class="col-3">20345678 - Ali Sodiq</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Pendebetan Bulanan</label>
-  <label>:</label>
-  <label class="col-3">0</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Pendebetan Harian</label>
+      <label>:</label>
+      <label class="col-3">0</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Awal</label>
-  <label>:</label>
-  <label class="col-3">1.400.000</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Pendebetan Bulanan</label>
+      <label>:</label>
+      <label class="col-3">0</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Mutasi Debet</label>
-  <label>:</label>
-  <label class="col-3">
-    0.000
-  </label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Awal</label>
+      <label>:</label>
+      <label class="col-3">1.400.000</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Mutasi Kredit </label>
-  <label>:</label>
-  <label class="col-3">0.00</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Mutasi Debet</label>
+      <label>:</label>
+      <label class="col-3">
+        0.000
+      </label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Buku (Ledger)</label>
-  <label>:</label>
-  <label class="col-3">1.400.000</label>
-</div>
-<br><br>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Mutasi Kredit </label>
+      <label>:</label>
+      <label class="col-3">0.00</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Kliring on B/S</label>
-  <label>:</label>
-  <label class="col-3">0.0</label>
-</div>
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Eff.(clear)</label>
-  <label>:</label>
-  <label class="col-3">1.400.000</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Buku (Ledger)</label>
+      <label>:</label>
+      <label class="col-3">1.400.000</label>
+    </div>
+    <br><br>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Yg. Diblokir</label>
-  <label>:</label>
-  <label class="col-3">0.0</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Kliring on B/S</label>
+      <label>:</label>
+      <label class="col-3">0.0</label>
+    </div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Eff.(clear)</label>
+      <label>:</label>
+      <label class="col-3">1.400.000</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Minimum</label>
-  <label>:</label>
-  <label class="col-3">10.000</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Yg. Diblokir</label>
+      <label>:</label>
+      <label class="col-3">0.0</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Nilai Plafon</label>
-  <label>:</label>
-  <label class="col-3">0.0</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Minimum</label>
+      <label>:</label>
+      <label class="col-3">10.000</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Yg. Tersedia </label>
-  <label>:</label>
-  <label class="col-3">1.350.000</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Nilai Plafon</label>
+      <label>:</label>
+      <label class="col-3">0.0</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Kredit Belum Otrs</label>
-  <label>:</label>
-  <label class="col-3">0.00</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Yg. Tersedia </label>
+      <label>:</label>
+      <label class="col-3">1.350.000</label>
+    </div>
 
-<div class="row">
-  <label class="col-3 font-weight-bold">Saldo Dpt. Dipakai</label>
-  <label>:</label>
-  <label class="col-3">1.350.000</label>
-</div>
+    <div class="row">
+      <label class="col-3 font-weight-bold">Kredit Belum Otrs</label>
+      <label>:</label>
+      <label class="col-3">0.00</label>
+    </div>
+
+    <div class="row">
+      <label class="col-3 font-weight-bold">Saldo Dpt. Dipakai</label>
+      <label>:</label>
+      <label class="col-3">1.350.000</label>
+    </div>
+
+  </mdb-card-body>
+</mdb-card>
