--- a/src/styles.css
+++ b/src/styles.css
@@ -132,13 +132,13 @@ h1.web-branch {
 
 /* body kontent / setting layout positioning in a content */
 /* ------------------------------------------------------ */
-
+/* background-image: linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%); */
 h5 {
-  background: -webkit-linear-gradient(#283c86, #45a247);
-  background: -moz-linear-gradient(#283c86, #45a247);
-  background: -ms-linear-gradient(#283c86, #45a247);
-  background: -o-linear-gradient(#283c86, #45a247);
-  background: linear-gradient(#283c86, #45a247);
+  background: -webkit-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -moz-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -ms-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -o-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
@@ -146,11 +146,11 @@ h5 {
 }
 
 h5.text-primary {
-  background: -webkit-linear-gradient(#283c86, #45a247);
-  background: -moz-linear-gradient(#283c86, #45a247);
-  background: -ms-linear-gradient(#283c86, #45a247);
-  background: -o-linear-gradient(#283c86, #45a247);
-  background: linear-gradient(#283c86, #45a247);
+  background: -webkit-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -moz-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -ms-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -o-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
@@ -158,16 +158,21 @@ h5.text-primary {
 }
 
 h5.card-title {
-  background: -webkit-linear-gradient(#283c86, #45a247);
+  /* background: -webkit-linear-gradient(#283c86, #45a247); */
   /* For Chrome and Safari */
-  background: -moz-linear-gradient(#283c86, #45a247);
+  /* background: -moz-linear-gradient(#283c86, #45a247); */
   /* For old Fx (3.6 to 15) */
-  background: -ms-linear-gradient(#283c86, #45a247);
+  /* background: -ms-linear-gradient(#283c86, #45a247); */
   /* For pre-releases of IE 10*/
-  background: -o-linear-gradient(#283c86, #45a247);
+  /* background: -o-linear-gradient(#283c86, #45a247); */
   /* For old Opera (11.1 to 12.0) */
-  background: linear-gradient(#283c86, #45a247);
+  /* background: linear-gradient(#283c86, #45a247); */
   /* Standard syntax; must be last */
+  background: -webkit-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -moz-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -ms-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: -o-linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
+  background: linear-gradient(80deg, rgba(2, 0, 36, 1) 0%, rgba(113, 147, 189, 1) 0%, rgba(69, 126, 181, 1) 0%, rgba(123, 145, 174, 1) 49%, rgba(11, 141, 171, 0) 100%, rgba(9, 147, 175, 1) 100%);
   -webkit-background-clip: text;
   color: transparent;
   /* -webkit-text-fill-color: transparent; */
